# gears-rust

./: .cf-studio-kit.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny-fips.toml  deny.toml  dylint.toml
.clusterfuzzlite/: Dockerfile  (+1 more)
apps/cf-gears-example-server/: Cargo.toml
gears/chat-engine/chat-engine/: Cargo.toml
gears/chat-engine/chat-engine-sdk/: Cargo.toml
gears/chat-engine/chat-engine-sdk/src/: lib.rs  models.rs  plugin.rs
gears/chat-engine/chat-engine/src/: config.rs  config_tests.rs  module.rs
gears/chat-engine/chat-engine/src/api/rest/: dto.rs  dto_tests.rs  error.rs  error_tests.rs  mod.rs  mod_tests.rs  stream_reader.rs  stream_reader_tests.rs
gears/chat-engine/chat-engine/src/api/rest/handlers/: export.rs  export_tests.rs  glue.rs  intelligence.rs  intelligence_tests.rs  messages.rs  messages_tests.rs  reactions.rs  reactions_tests.rs  search.rs  search_tests.rs  sessions.rs  variants.rs  variants_tests.rs
gears/chat-engine/chat-engine/src/api/rest/routes/: mod.rs
gears/chat-engine/chat-engine/src/domain/: context.rs  context_tests.rs  error.rs  error_tests.rs  export.rs  export_tests.rs  llm_config.rs  llm_config_tests.rs  memory_strategy.rs  memory_strategy_tests.rs  message.rs  message_tests.rs  mod.rs  ports.rs  reaction.rs  reaction_tests.rs  search.rs  search_tests.rs  session.rs  session_tests.rs  stream_delta.rs  stream_delta_tests.rs
gears/chat-engine/chat-engine/src/domain/service/: export_service.rs  export_service_tests.rs  intelligence_service.rs  intelligence_service_tests.rs  message_service.rs  message_service_tests.rs  plugin_service.rs  plugin_service_tests.rs  reaction_service.rs  reaction_service_tests.rs  search_service.rs  search_service_tests.rs  session_service.rs  session_service_tests.rs  variant_service.rs  variant_service_tests.rs  webhook.rs  webhook_tests.rs
gears/chat-engine/chat-engine/src/infra/: llm_gateway.rs  llm_gateway_tests.rs  url_guard.rs  url_guard_tests.rs  webhook_compat.rs  webhook_compat_tests.rs
gears/chat-engine/chat-engine/src/infra/db/: conversions.rs  conversions_tests.rs  error_map.rs  error_map_tests.rs  mod.rs
gears/chat-engine/chat-engine/src/infra/db/entity/: message.rs  message_tests.rs
gears/chat-engine/chat-engine/src/infra/db/migrations/: m20260417_000001_create_session_tables.rs  m20260417_000002_create_messages_table.rs  m20260417_000003_create_plugin_configs_table.rs  m20260417_000004_create_message_reactions_table.rs
gears/chat-engine/chat-engine/src/infra/db/repo/: message_repo.rs  plugin_config_repo.rs  plugin_config_repo_tests.rs  reaction_repo.rs  reaction_repo_tests.rs  session_repo.rs  session_type_repo.rs  session_type_repo_tests.rs  stream_event_repo.rs  stream_event_repo_tests.rs  variant_repo.rs
gears/chat-engine/chat-engine/src/infra/leader/: k8s_lease.rs  k8s_lease_tests.rs  mod.rs  mod_tests.rs
gears/chat-engine/chat-engine/src/infra/search/: backend.rs
gears/chat-engine/chat-engine/tests/: e2e_test.rs  persistence_test.rs
gears/chat-engine/chat-engine/tests/common/: db.rs
gears/credstore/credstore/: Cargo.toml
gears/credstore/credstore-sdk/: Cargo.toml
gears/file-parser/: Cargo.toml
gears/file-storage/file-storage/: Cargo.toml
gears/file-storage/file-storage/src/api/rest/: dto.rs  handlers.rs  routes.rs
gears/file-storage/file-storage/src/domain/: audit.rs  cleanup.rs  data_plane.rs  etag.rs  mod.rs  multipart_service.rs  policy.rs  policy_service.rs  ports.rs  service.rs
gears/file-storage/file-storage/src/domain/service/: backend.rs  create.rs  mod.rs  write.rs
gears/file-storage/file-storage/src/infra/backend/: mod.rs  s3.rs
gears/file-storage/file-storage/src/infra/content/: hash.rs  hash_mode.rs
gears/file-storage/file-storage/src/infra/storage/: store.rs
gears/file-storage/file-storage/src/infra/storage/migrations/: m20260701_000001_p2_initial.rs  m20260707_000001_content_hash_modes.rs
gears/file-storage/file-storage/tests/: audit_test.rs  cleanup_test.rs  enforce_test.rs  multipart_test.rs  ownership_test.rs  service_test.rs
gears/mini-chat/mini-chat/: Cargo.toml
gears/mini-chat/mini-chat-sdk/: Cargo.toml
gears/system/api-gateway/: Cargo.toml
gears/system/api-gateway/src/middleware/: access_log.rs  auth.rs  rate_limit.rs
gears/system/gear-orchestrator/: Cargo.toml
libs/modkit/: Cargo.toml
libs/modkit-canonical-errors/: Cargo.toml
libs/modkit-canonical-errors/src/: builder.rs  context.rs  lib.rs  problem.rs
libs/modkit-canonical-errors/tests/: problem.rs
libs/modkit-http/: Cargo.toml
libs/modkit-http/src/: builder.rs  client.rs  tls.rs
libs/modkit-http/src/layers/: retry.rs
libs/modkit/src/api/: canonical_error_layer.rs  mod.rs  openapi_registry.rs
libs/modkit/src/backends/: log_forwarder.rs
libs/modkit/src/bootstrap/: crypto.rs
libs/modkit/src/bootstrap/config/: mod.rs
libs/modkit/src/bootstrap/host/: logging.rs
libs/rustls-fips-shim/: Cargo.toml
libs/system-sdks/: Cargo.toml
libs/system-sdks/sdks/directory/: Cargo.toml
libs/toolkit-auth/: Cargo.toml
libs/toolkit-db-macros/: Cargo.toml
libs/toolkit-gts/: Cargo.toml
libs/toolkit-gts-macros/: Cargo.toml
libs/toolkit-http/: Cargo.toml
libs/toolkit-http-middleware/: Cargo.toml  README.md
libs/toolkit-http-middleware/src/: auth.rs  auth_tests.rs  lib.rs  security.rs  security_tests.rs
libs/toolkit-http/src/: lib.rs  security.rs
libs/toolkit-macros/: Cargo.toml
libs/toolkit-odata/: Cargo.toml
libs/toolkit-odata-macros/: Cargo.toml
libs/toolkit-odata/src/: pagination.rs
libs/toolkit-sdk/: Cargo.toml
libs/toolkit-security/: Cargo.toml
libs/toolkit-security/src/: authenticator.rs  constants.rs  internal_auth.rs  lib.rs
libs/toolkit-security/tests/ui/: platform_context_is_not_tenant_context.rs  platform_context_is_not_tenant_context.stderr
libs/toolkit-stable-hash/: Cargo.toml  README.md
libs/toolkit-stable-hash/src/: lib.rs  murmur3.rs  murmur3_tests.rs
libs/toolkit-transport-grpc/: Cargo.toml
libs/toolkit-transport-grpc/src/: internal_auth.rs  lib.rs
(+879 files in other folders)
