[package]
name = "cf-modkit-canonical-errors"
version = "0.7.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit canonical error types based on Google AIP-193 error model"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["rust-patterns"]

[lib]
name = "modkit_canonical_errors"

[features]
default = []
sea-orm = ["dep:sea-orm"]
axum = ["dep:axum", "dep:http", "dep:tracing"]
utoipa = ["dep:utoipa"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
modkit-canonical-errors-macro = { workspace = true }

[dev-dependencies]
gts-id = { workspace = true }
trybuild = { workspace = true }
