[package]
name = "cyberware-modkit"
version = "0.6.10"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core ModKit library"
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberware-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit"

[lints]
workspace = true

[features]
# Enable the runner and the runtime integration by default.
default = ["otel", "db"]
coverage_nightly = []
# FIPS-140-3: install a FIPS-validated crypto provider at bootstrap.
#
# - `cyberware-rustls-fips-shim` is an empty crate whose ONLY purpose is to pull
#   `rustls` (and `hyper-rustls`) with the `fips` feature, but **only** on
#   targets where AWS-LC FIPS is the intended backend — i.e. NOT on macOS
#   (Apple corecrypto) and NOT on Windows (CNG). On those targets its
#   target-gated deps are absent, so `rustls/fips` is NOT activated →
#   `aws-lc-fips-sys` is excluded from the build graph entirely.
# - `cyberware-rustls-corecrypto-provider` is the Apple corecrypto-backed provider,
#   used on macOS+fips.
# - `rustls-cng-crypto` is the Windows CNG-backed provider, used on
#   Windows+fips. Listed under `[target.'cfg(target_os = "windows")']`
#   below; `dep:rustls-cng-crypto` is a no-op on non-Windows hosts.
fips = [
    "dep:rustls-fips-shim",
    "dep:rustls-corecrypto-provider",
    # Forward the feature so `corecrypto::default_provider()` automatically
    # becomes the TLS-1.3-only FIPS-claim variant on macOS — mirrors how
    # rustls-cng-crypto routes `default_provider` to `fips_provider` under
    # its own `fips` feature.
    "rustls-corecrypto-provider/fips",
    # Windows CNG provider — target-conditional dep (see below), so this
    # activator is a no-op on non-Windows hosts.
    "dep:rustls-cng-crypto",
]

# Database integration (modkit-db, migrations, DbManager/DbHandle in contexts/runtime)
db = ["dep:modkit-db", "dep:sea-orm-migration"]

# OpenTelemetry support for distributed tracing
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:opentelemetry-otlp",
    "dep:tonic",
]
# Transactional outbox pipeline (preview — API may change)
preview-outbox = ["db", "modkit-db/preview-outbox"]

bootstrap = [
    "db",
    "dep:serde-saphyr",
    "cyberware-system-sdks/directory_grpc",
    "dep:tracing-appender",
    "dep:file-rotate",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "dep:chrono",
    "dep:url",
    "dep:dsn",
    "dep:supports-color",
    "dep:enable-ansi-support",
]

[dependencies]
# Project-local crates
modkit-macros = { workspace = true }
modkit-errors = { workspace = true, features = ["utoipa", "axum"] }
modkit-canonical-errors = { workspace = true, features = ["axum", "utoipa"] }
modkit-db = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }
modkit-odata = { workspace = true }
modkit-sdk = { workspace = true }
cyberware-system-sdks = { workspace = true, features = ["directory"] }

# Core deps
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
file-rotate = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
url = { workspace = true, optional = true }
dsn = { workspace = true, optional = true }
modkit-utils = { workspace = true }
rustls = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

# Router/types used in contracts and runtime
axum = { workspace = true }
http = { workspace = true }

# OpenAPI/serde
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"] }

# GTS support
gts = { workspace = true }
gts-macros = { workspace = true }
modkit-gts = { workspace = true }

# Performance / lock-free structures
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
urlencoding = { workspace = true }

# OpenTelemetry tracing support (optional) - full implementation
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
supports-color = { workspace = true, optional = true }
enable-ansi-support = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# gRPC support only for otel (optional)
tonic = { workspace = true, optional = true }

# Apple corecrypto-backed rustls CryptoProvider. The crate's `lib.rs` is gated
# on `cfg(target_os = "macos")` so on Linux/Windows it compiles to an empty
# lib with no transitive deps — safe to list unconditionally. Activated by
# the `fips` feature.
rustls-corecrypto-provider = { workspace = true, optional = true }

# Workspace-feature-unification shim — see crate docs. Empty lib on all
# targets; on non-macOS its transitive deps add `rustls/fips` +
# `hyper-rustls/fips` via Cargo feature unification.
rustls-fips-shim = { workspace = true, optional = true }

# Unix-specific dependencies for graceful process termination
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal"] }

# Windows CNG-backed rustls CryptoProvider. Activated by the `fips` feature.
# Listed target-conditionally because the crate links against Windows CNG
# (`bcrypt.dll` / `ncrypt.dll`) and is meaningless on other targets.
[target.'cfg(target_os = "windows")'.dependencies]
rustls-cng-crypto = { workspace = true, optional = true }

[dev-dependencies]
tower = { workspace = true }
trybuild = { workspace = true }
httpmock = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }
modkit-db = { workspace = true, features = ["sqlite"] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
tokio-metrics = { workspace = true }
