[package]
name = "cf-gears-toolkit-db-macros"
version = "0.6.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proc-macro derives for toolkit-db secure ORM layer"
readme = "README.md"
keywords = ["constructorfabric", "cf-gears", "cf-gears-toolkit"]
categories = ["development-tools::procedural-macro-helpers"]
metadata.docs.rs.all-features = true

[lib]
proc-macro = true
name = "toolkit_db_macros"

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }

[dev-dependencies]
trybuild = "1"
